# calyx-riscv

./: .gitignore  README.org
data/: simple.json
fud2/: riscv.rhai
riscv-to-calyx/: Cargo.toml
riscv-to-calyx/data/: simple.s
riscv-to-calyx/src/: decode.rs  main.rs
src/: main.futil
